--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Woofswap Market Cap Heatmap - BONE Pairs</h1>
+        <h1>Woofswap Heatmap</h1>
         <div id="pool-grid" class="loading">Loading...</div>
         <button id="download-btn" class="download-btn" style="display: none;">Download as PNG</button>
         <div class="note">
