--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 
         // Auto-update every 10 minutes
         function startAutoUpdate() {
-            setInterval(fetchWoofswapPools, 10 * 60 * 1000); // 10 minutes
+            setInterval(fetchWoofswapPools, 6 * 60 * 60 * 1000);
         }
 
         // Initial load and start auto-update
