--- a/index.html
+++ b/index.html
@@ -467,9 +467,9 @@
             }
         }
 
-        // Auto-update every 10 minutes
+        // Auto-update every 1 minutes
         function startAutoUpdate() {
-            setInterval(fetchWoofswapPools, 6 * 60 * 60 * 1000);
+            setInterval(fetchWoofswapPools, 1 * 60 * 1000); // 1 minutes
         }
 
         // Initial load and start auto-update
