--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div id="pool-grid" class="loading">Loading...</div>
         <button id="download-btn" class="download-btn" style="display: none;">Download as PNG</button>
         <div class="note">
-            Data Source: GeckoTerminal API | Auto-updates every 10 minutes
+            Data Source: GeckoTerminal API | Auto-updates every 1 minute
         </div>
         <div class="footer">
             © 2025 Woofswap. All rights reserved.
@@ -330,18 +330,30 @@
             gridContainer.innerHTML = '<div class="loading">Loading...</div>';
 
             try {
-                // Fetch multiple pages to ensure enough pools (5 pages, 50 pools per page)
+                // Fetch pools dynamically until we get enough or no more data
                 let allPools = [];
-                for (let page = 1; page <= 5; page++) {
+                let page = 1;
+                const targetPoolCount = 50; // Target number of pools to display (changed from 100 to 50)
+                let hasMoreData = true;
+
+                while (hasMoreData && allPools.length < targetPoolCount * 2) { // Buffer to ensure enough pools after filtering
                     const response = await fetch(`https://api.geckoterminal.com/api/v2/networks/shibarium/pools?include=dex,base_token,quote_token&page=${page}`, {
                         headers: { 'accept': 'application/json' }
                     });
                     if (!response.ok) throw new Error(`API request failed: ${response.status}`);
 
                     const data = await response.json();
-                    allPools = allPools.concat(data.data);
+                    const pools = data.data || [];
+
+                    if (pools.length === 0) {
+                        hasMoreData = false; // No more data to fetch
+                        break;
+                    }
+
+                    allPools = allPools.concat(pools);
+                    page++;
                 }
-                console.log('All pools:', allPools);
+                console.log(`Fetched ${allPools.length} pools across ${page - 1} pages`);
 
                 // Filter for Woofswap pools and BONE pairs, excluding specific tokens
                 const woofswapPools = allPools.filter(pool => {
@@ -393,15 +405,17 @@
                         };
                     });
 
-                // Sort by market cap and take top 100
+                // Sort by market cap and take top 50 (changed from 100 to 50)
                 const sortedPools = poolsWithDetails
                     .sort((a, b) => b.marketCap - a.marketCap)
-                    .slice(0, 100);
+                    .slice(0, 50);
 
                 if (sortedPools.length === 0) {
                     gridContainer.innerHTML = '<div class="error">No valid BONE pool data (excluding WETH, USDT, USDC, DAI, BTC).</div>';
                     return;
                 }
+
+                console.log('Final pools to display:', sortedPools);
 
                 // Adjust container size based on pool count
                 adjustContainerSize(sortedPools.length);
@@ -467,9 +481,9 @@
             }
         }
 
-        // Auto-update every 1 minutes
+        // Auto-update every 100 minute
         function startAutoUpdate() {
-            setInterval(fetchWoofswapPools, 1 * 60 * 1000); // 1 minutes
+            setInterval(fetchWoofswapPools, 100 * 60 * 1000); // 100 minute
         }
 
         // Initial load and start auto-update
