--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Woofswap Heatmap</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://woofswap.finance/image/tokens/WOOF.png" />
+    <!-- Google Fonts: Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', Arial, sans-serif; /* Use Poppins with fallbacks */
             background-color: #f0f2f5;
             margin: 0;
             padding: 20px;
@@ -30,6 +32,7 @@
             text-align: center;
             color: #0088cc;
             margin-bottom: 20px;
+            font-weight: 700; /* Use bold weight for heading */
         }
         .grid-container {
             position: relative;
@@ -45,7 +48,7 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-weight: bold;
+            font-weight: 500; /* Medium weight for better readability */
             color: #fff;
             text-align: center;
             overflow: hidden;
@@ -131,6 +134,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            font-weight: 500;
         }
         .download-btn:hover {
             background-color: #006d9f;
