--- a/Shibarium/index.html
+++ b/Shibarium/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shibarium Heatmap</title>
-    <link rel="icon" type="image/png" href="https://via.placeholder.com/32?text=SHIB" />
+    <link rel="icon" type="image/png" href="https://woofswap.finance/image/tokens/WOOF.png" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         body {
